# rust-practice

./: Cargo.toml  readme.md
src/: config.rs  main.rs  router.rs
src/controller/: default.rs
src/handler/: common.rs
src/libs/: clio.rs  config.rs  config_clio.rs  connect.rs  log.rs  logger.rs  mod.rs  prometheus.rs
src/model/: domain.rs  dto.rs  entity.rs  mod.rs
src/repository/: cache.rs  db.rs  mod.rs  mysql.rs  redis.rs
src/utils/: clio.rs  common.rs  connect.rs  fetch.rs  log.rs  mod.rs  prometheus.rs  response.rs
