[package]
name = "rust-practice"
description = "A rust practice and want to look for a girlfriend..."
version = "1.0.0"
edition = "2024"
repository = "https://github.com/meizikeai/rust-practice.git"
authors = ["meizikeai<meizikeai@163.com>"]

[dependencies]
axum = "0.8"
chrono = "0.4"
deadpool-redis = { version = "0.22", features = ["rt_tokio_1"] }
flexi_logger = "0.31"
http-body = "1.0"
lazy_static = "1.0"
log = "0.4"
once_cell = "1.0"
pin-project = "1.0"
prometheus = "0.14"
redis = { version = "0.32", features = ["tokio-comp"] }
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio", "json"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
