[package]
name = "rust-practice"
description = "I'm working on a Rust project, but I'm also looking for a girlfriend."
version = "1.0.0"
edition = "2024"
repository = "https://github.com/meizikeai/rust-practice.git"
authors = ["meizikeai<meizikeai@163.com>"]

[dependencies]
axum = "0.8"
chrono = "0.4"
deadpool-redis = { version = "0.22", features = ["rt_tokio_1"] }
http = "1.4"
lazy_static = "1.0"
prometheus = { version = "0.14", features = ["process"] }
redis = { version = "0.32", features = ["tokio-comp"] }
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio", "json"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
